fixed alignment

--- a/spotifyAPI.css
+++ b/spotifyAPI.css
@@ -22,6 +22,7 @@
 	font-family: 'Oxygen', sans-serif;
 	margin-right: 50%;
 	margin-left: 15%;
+	margin-top: 5%;
 }
 #artistType{
 	color: #333;
